# papertorepo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  history.md  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/versions/: 0006_generic_sync_batches.py  0009_arxiv_daily_freshness_and_feed_fields.py  0010_rename_repo_job_types.py  0012_sync_papers_arxiv_checkpoints.py  0014_github_url_metadata.py  0015_drop_source_github_url.py
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/tests/: test_alphaxiv_links.py  test_export_modes.py  test_job_type_migration.py  test_normalize.py  test_public_api.py  test_scope_validation.py  test_sql_endpoint.py  test_sync_papers.py  test_sync_policy.py
docs/design/: common.md  find-repos.md  refresh-metadata.md  sync-arxiv.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  (+1 more)
scripts/: run_december_2025_pipeline.py
tests/: conftest.py  test_alphaxiv_links.py  test_arxiv_metadata.py  test_arxiv_sync.py  test_cli_link_sync.py  test_debug_arxiv_listing.py  test_export_modes.py  test_github_search.py  test_huggingface_links.py  test_job_batching.py  test_job_progress.py  test_job_type_migration.py  test_jobs.py  test_normalize.py  test_public_api.py  test_resolver.py  test_scope_validation.py  test_sql_endpoint.py  test_storage.py  test_sync_papers.py  test_sync_policy.py  test_v2_jobs.py
tests_v2/: test_debug_arxiv_listing.py  test_job_batching.py  test_job_progress.py  test_public_api.py
(+135 files in other folders)
